Replace non-ASCII characters for their LaTeX equiv, remove mbox around institutions.

--- a/150506_v2_DUNE_authors.tex
+++ b/150506_v2_DUNE_authors.tex
@@ -780,332 +780,332 @@
 
 
 
-\affil[1]{\mbox{ABC Federal University, Santo Andr\'e \textendash SP, 09210-580 (Brazil), Brazil}}
+\affil[1]{ABC Federal University, Santo Andr\'e \textendash SP, 09210-580 (Brazil), Brazil}
 
-\affil[2]{\mbox{APC-Paris, Batiment Condorcet;
+\affil[2]{APC-Paris, Batiment Condorcet;
 10, rue Alice Domon et L'eonie Duquet;
-F-75205 Paris CEDEX 13, France}}
+F-75205 Paris CEDEX 13, France}
 
-\affil[3]{\mbox{Institute of Physics ASCR, v. v. i. , Na Slovance 2; 182 21 Praha 8; Czech Republic, Czech Republic}}
+\affil[3]{Institute of Physics ASCR, v. v. i. , Na Slovance 2; 182 21 Praha 8; Czech Republic, Czech Republic}
 
-\affil[4]{\mbox{Univ. of Alabama (Tuscaloosa), Tuscaloosa, AL 35487-0324, USA}}
+\affil[4]{Univ. of Alabama (Tuscaloosa), Tuscaloosa, AL 35487-0324, USA}
 
-\affil[5]{\mbox{Univ. Federal de Alfenas em Po\c cos de Caldas, 11999, CEP 37715-900 Po\c cos de Caldas-MG, Brazil}}
+\affil[5]{Univ. Federal de Alfenas em Po\c cos de Caldas, 11999, CEP 37715-900 Po\c cos de Caldas-MG, Brazil}
 
-\affil[6]{\mbox{Aligarh Muslim University, , India}}
+\affil[6]{Aligarh Muslim University, , India}
 
-\affil[7]{\mbox{Antananarivo, , Madagascar}}
+\affil[7]{Antananarivo, , Madagascar}
 
-\affil[8]{\mbox{Argonne National Lab., Argonne, IL 60439, USA}}
+\affil[8]{Argonne National Lab., Argonne, IL 60439, USA}
 
-\affil[9]{\mbox{Uversidad del Atl antico, Barranquilla, Colombia, Columbia}}
+\affil[9]{Uversidad del Atl antico, Barranquilla, Colombia, Columbia}
 
-\affil[10]{\mbox{Banaras Hindu University, Dept. of Physics, Varanasi UP 221005, India}}
+\affil[10]{Banaras Hindu University, Dept. of Physics, Varanasi UP 221005, India}
 
-\affil[11]{\mbox{Bhabha Atmoic Research Center, , India}}
+\affil[11]{Bhabha Atmoic Research Center, , India}
 
-\affil[12]{\mbox{Univ. of Bern, Lab for High Energy Physics;
-Sidlerstrasse 5; CH-3012 Bern, Switzerland}}
+\affil[12]{Univ. of Bern, Lab for High Energy Physics;
+Sidlerstrasse 5; CH-3012 Bern, Switzerland}
 
-\affil[13]{\mbox{Boston University, Boston, MA 02215, USA}}
+\affil[13]{Boston University, Boston, MA 02215, USA}
 
-\affil[14]{\mbox{Brookhaven National Lab., Upton, NY 11973-5000, USA}}
+\affil[14]{Brookhaven National Lab., Upton, NY 11973-5000, USA}
 
-\affil[15]{\mbox{CERN, European Organization for Nuclear Research
-European Laboratory for Particle Physics; 1211 Gen`eve 23, Switzerland}}
+\affil[15]{CERN, European Organization for Nuclear Research
+European Laboratory for Particle Physics; 1211 Gen`eve 23, Switzerland}
 
-\affil[16]{\mbox{CIEMAT, Divisi\'on de F\'{i}sica de Part\'{i}culas; Avenida Complutense 40; E-28040 Madrid, Spain}}
+\affil[16]{CIEMAT, Divisi\'on de F\'{i}sica de Part\'{i}culas; Avenida Complutense 40; E-28040 Madrid, Spain}
 
-\affil[17]{\mbox{CNI Pisa, , Italy}}
+\affil[17]{CNI Pisa, , Italy}
 
-\affil[18]{\mbox{University of California at Berkeley, \#7300;
-Berkeley, CA 94720-7300, USA}}
+\affil[18]{University of California at Berkeley, \#7300;
+Berkeley, CA 94720-7300, USA}
 
-\affil[19]{\mbox{Univ. of California (Davis), Davis, CA 95616, USA}}
+\affil[19]{Univ. of California (Davis), Davis, CA 95616, USA}
 
-\affil[20]{\mbox{Univ. of California (Irvine), Irvine, CA 92697-4575, USA}}
+\affil[20]{Univ. of California (Irvine), Irvine, CA 92697-4575, USA}
 
-\affil[21]{\mbox{Univ. of California (Los Angeles), Los Angeles, CA 90095-1547, USA}}
+\affil[21]{Univ. of California (Los Angeles), Los Angeles, CA 90095-1547, USA}
 
-\affil[22]{\mbox{California Inst. of Tech., MC 356-48;
-Pasadena, CA 91125, USA}}
+\affil[22]{California Inst. of Tech., MC 356-48;
+Pasadena, CA 91125, USA}
 
-\affil[23]{\mbox{Univ. of Cambridge, JJ Thomson Avenue, Cambridge CB3 0HE, UK}}
+\affil[23]{Univ. of Cambridge, JJ Thomson Avenue, Cambridge CB3 0HE, UK}
 
-\affil[24]{\mbox{Univ. de Campinas, Av. S\'ergio Buarque de Holanda, 777 CEP 13083-859 Campinas-SP, Brazil}}
+\affil[24]{Univ. de Campinas, Av. S\'ergio Buarque de Holanda, 777 CEP 13083-859 Campinas-SP, Brazil}
 
-\affil[25]{\mbox{Univ. di Catania, Via Santa Sofia, I-95123 Catania, Italy}}
+\affil[25]{Univ. di Catania, Via Santa Sofia, I-95123 Catania, Italy}
 
-\affil[26]{\mbox{Institute of Particle and Nuclear Physics of the Faculty of Mathematics and Physics of the Charles University in Prague, V Hole\v sovi\v ck\'ach 747/2; 180 00 Praha 8-Libe\v n; Czech Republic, Czech Republic}}
+\affil[26]{Institute of Particle and Nuclear Physics of the Faculty of Mathematics and Physics of the Charles University in Prague, V Hole\v sovi\v ck\'ach 747/2; 180 00 Praha 8-Libe\v n; Czech Republic, Czech Republic}
 
-\affil[27]{\mbox{Univ. of Chicago, Chicago, IL 60637-1434, USA}}
+\affil[27]{Univ. of Chicago, Chicago, IL 60637-1434, USA}
 
-\affil[28]{\mbox{Univ. of Cincinnati, Cincinnati, OH 45221-0011, USA}}
+\affil[28]{Univ. of Cincinnati, Cincinnati, OH 45221-0011, USA}
 
-\affil[29]{\mbox{Cinvestav, , Mexico}}
+\affil[29]{Cinvestav, , Mexico}
 
-\affil[30]{\mbox{Colima, , Mexico}}
+\affil[30]{Colima, , Mexico}
 
-\affil[31]{\mbox{Univ. of Colorado, Boulder, CO 80309, USA}}
+\affil[31]{Univ. of Colorado, Boulder, CO 80309, USA}
 
-\affil[32]{\mbox{Colorado State University, Fort Collins, CO 80523, USA}}
+\affil[32]{Colorado State University, Fort Collins, CO 80523, USA}
 
-\affil[33]{\mbox{Columbia University, New York, NY 10027, USA}}
+\affil[33]{Columbia University, New York, NY 10027, USA}
 
-\affil[34]{\mbox{Cornell Univ., Laboratory for Elementary-Particle Physics; Newman Lab;
-Ithaca, NY 14853\textendash5001, USA}}
+\affil[34]{Cornell Univ., Laboratory for Elementary-Particle Physics; Newman Lab;
+Ithaca, NY 14853\textendash5001, USA}
 
-\affil[35]{\mbox{Czech Technical University in Prague, Brehova 7; 115 19 Praha 1; Czech Republic, Czech Republic}}
+\affil[35]{Czech Technical University in Prague, Brehova 7; 115 19 Praha 1; Czech Republic, Czech Republic}
 
-\affil[36]{\mbox{Dakota State University, Madison, SD 57042, USA}}
+\affil[36]{Dakota State University, Madison, SD 57042, USA}
 
-\affil[37]{\mbox{Univ. of Delhi, Department of Physics and Astrophysics, Delhi 110007, India}}
+\affil[37]{Univ. of Delhi, Department of Physics and Astrophysics, Delhi 110007, India}
 
-\affil[38]{\mbox{Drexel University, Philadelphia, PA 19104, USA}}
+\affil[38]{Drexel University, Philadelphia, PA 19104, USA}
 
-\affil[39]{\mbox{Duke University, Durham, NC 27706, USA}}
+\affil[39]{Duke University, Durham, NC 27706, USA}
 
-\affil[40]{\mbox{Univ. of Durham, Institute for Particle Physics Phenomenology;
+\affil[40]{Univ. of Durham, Institute for Particle Physics Phenomenology;
 Dept. of Physics, Ogden Centre for Fund. Physics;
-South Road; Durham DH1 3LE, UK}}
+South Road; Durham DH1 3LE, UK}
 
-\affil[41]{\mbox{Univ. Estadual de Feira de Santana, S/N;44036-900, Feira de Santana-BA, Brazil}}
+\affil[41]{Univ. Estadual de Feira de Santana, S/N;44036-900, Feira de Santana-BA, Brazil}
 
-\affil[42]{\mbox{Fermi National Accelerator Lab, Batavia, IL 60510-0500, USA}}
+\affil[42]{Fermi National Accelerator Lab, Batavia, IL 60510-0500, USA}
 
-\affil[43]{\mbox{Univ. Federal de Goias, GO, Brazil, Brazil}}
+\affil[43]{Univ. Federal de Goias, GO, Brazil, Brazil}
 
-\affil[44]{\mbox{Gran Sasso Science Institute, , Italy}}
+\affil[44]{Gran Sasso Science Institute, , Italy}
 
-\affil[45]{\mbox{Harish-Chandra Research Institute, Jhunsi, Allahabad 211 019, India}}
+\affil[45]{Harish-Chandra Research Institute, Jhunsi, Allahabad 211 019, India}
 
-\affil[46]{\mbox{Univ. of Hawaii, Honolulu, HI 96822-2219, USA}}
+\affil[46]{Univ. of Hawaii, Honolulu, HI 96822-2219, USA}
 
-\affil[47]{\mbox{Univ. of Houston, Houston, TX 77204, USA}}
+\affil[47]{Univ. of Houston, Houston, TX 77204, USA}
 
-\affil[48]{\mbox{Huddersfield, , UK}}
+\affil[48]{Huddersfield, , UK}
 
-\affil[49]{\mbox{Horia Hulubei National Institute of Physiscs and Nuclear Engineering, Romania, , Romania}}
+\affil[49]{Horia Hulubei National Institute of Physiscs and Nuclear Engineering, Romania, , Romania}
 
-\affil[50]{\mbox{Hyderabad, , India}}
+\affil[50]{Hyderabad, , India}
 
-\affil[51]{\mbox{IFAE Barcelona, , Spain}}
+\affil[51]{IFAE Barcelona, , Spain}
 
-\affil[52]{\mbox{Illinois Institute of Technology , Room 182LS; Chicago, IL 60616, USA}}
+\affil[52]{Illinois Institute of Technology , Room 182LS; Chicago, IL 60616, USA}
 
-\affil[53]{\mbox{IIT (Hyderabad), , India}}
+\affil[53]{IIT (Hyderabad), , India}
 
-\affil[54]{\mbox{Institute for Nuclear Research, 7a
-Moscow, Russia 117312, Russia}}
+\affil[54]{Institute for Nuclear Research, 7a
+Moscow, Russia 117312, Russia}
 
-\affil[55]{\mbox{Institute for Research in Fundamental Sciences (IPM, Tehran, Iran.
+\affil[55]{Institute for Research in Fundamental Sciences (IPM, Tehran, Iran.
 Postal code: 19538-33511
-PO Box: 19395-5531, Iran}}
+PO Box: 19395-5531, Iran}
 
-\affil[56]{\mbox{Idaho State, , USA}}
+\affil[56]{Idaho State, , USA}
 
-\affil[57]{\mbox{Imperial College of Science Tech. \& Medicine, Blackett Lab.; Prince Consort Road; London SW7 2BZ, UK}}
+\affil[57]{Imperial College of Science Tech. \& Medicine, Blackett Lab.; Prince Consort Road; London SW7 2BZ, UK}
 
-\affil[58]{\mbox{Indian Institute of Technology Guwahati, Guwahati, 781 039, India}}
+\affil[58]{Indian Institute of Technology Guwahati, Guwahati, 781 039, India}
 
-\affil[59]{\mbox{Indiana University, Bloomington, IN 47405-7105, USA}}
+\affil[59]{Indiana University, Bloomington, IN 47405-7105, USA}
 
-\affil[60]{\mbox{Iowa State University, Ames, IA 50011, USA}}
+\affil[60]{Iowa State University, Ames, IA 50011, USA}
 
-\affil[61]{\mbox{IPNL Lyon, , France}}
+\affil[61]{IPNL Lyon, , France}
 
-\affil[62]{\mbox{Jammu, , India}}
+\affil[62]{Jammu, , India}
 
-\affil[63]{\mbox{Kansas State University, Manhattan, KS 66506, USA}}
+\affil[63]{Kansas State University, Manhattan, KS 66506, USA}
 
-\affil[64]{\mbox{Kavli IPMU, Univ. of Tokyo, Kashiwa Shi, Chiba 277-8568, Japan}}
+\affil[64]{Kavli IPMU, Univ. of Tokyo, Kashiwa Shi, Chiba 277-8568, Japan}
 
-\affil[65]{\mbox{KEK, High Energy Accelerator Research Organization
-1\textendash1 Oho, Tsukuba-shi; Ibaraki-ken 305-0801, Japan}}
+\affil[65]{KEK, High Energy Accelerator Research Organization
+1\textendash1 Oho, Tsukuba-shi; Ibaraki-ken 305-0801, Japan}
 
-\affil[66]{\mbox{KYIV National University, Department of Nuclear Physics, 64, 01601 Kyiv, Ukraine}}
+\affil[66]{KYIV National University, Department of Nuclear Physics, 64, 01601 Kyiv, Ukraine}
 
-\affil[67]{\mbox{Koneru Lakshmaiah, , India}}
+\affil[67]{Koneru Lakshmaiah, , India}
 
-\affil[68]{\mbox{Krakow, , Poland}}
+\affil[68]{Krakow, , Poland}
 
-\affil[69]{\mbox{Lab. d'Annecy-le-Vieux de Phys. des Particules, BP 110; F-74941 Annecy-le-Vieux CEDEX, France}}
+\affil[69]{Lab. d'Annecy-le-Vieux de Phys. des Particules, BP 110; F-74941 Annecy-le-Vieux CEDEX, France}
 
-\affil[70]{\mbox{Laboratori Nazionali del Gran Sasso, I-67010 Assergi, AQ, Italy}}
+\affil[70]{Laboratori Nazionali del Gran Sasso, I-67010 Assergi, AQ, Italy}
 
-\affil[71]{\mbox{Lancaster University, Bailrigg, Lancaster LA1 4YB, UK}}
+\affil[71]{Lancaster University, Bailrigg, Lancaster LA1 4YB, UK}
 
-\affil[72]{\mbox{Lawrence Berkeley National Lab., Berkeley, CA 94720-8153, USA}}
+\affil[72]{Lawrence Berkeley National Lab., Berkeley, CA 94720-8153, USA}
 
-\affil[73]{\mbox{Liege, , Belgium}}
+\affil[73]{Liege, , Belgium}
 
-\affil[74]{\mbox{Univ. of Liverpool, L69 7ZE, Liverpool, UK}}
+\affil[74]{Univ. of Liverpool, L69 7ZE, Liverpool, UK}
 
-\affil[75]{\mbox{University College London, London, WC1E 6BT, UK}}
+\affil[75]{University College London, London, WC1E 6BT, UK}
 
-\affil[76]{\mbox{Los Alamos National Laboratory, Los Alamos, NM 87545, USA}}
+\affil[76]{Los Alamos National Laboratory, Los Alamos, NM 87545, USA}
 
-\affil[77]{\mbox{Louisiana State University, Baton Rouge, LA 70803-4001, USA}}
+\affil[77]{Louisiana State University, Baton Rouge, LA 70803-4001, USA}
 
-\affil[78]{\mbox{Lucknow, , India}}
+\affil[78]{Lucknow, , India}
 
-\affil[79]{\mbox{Max Planck MPP, Max-Planck-Institut fuer Physik
+\affil[79]{Max Planck MPP, Max-Planck-Institut fuer Physik
 (Werner-Heisenberg-Institut)
 Foehringer Ring 6
-80805 Muenchen, Germany, Germany}}
+80805 Muenchen, Germany, Germany}
 
-\affil[80]{\mbox{Univ. of Manchester, Oxford Road, Manchester M13 9PL, UK}}
+\affil[80]{Univ. of Manchester, Oxford Road, Manchester M13 9PL, UK}
 
-\affil[81]{\mbox{Univ. of Maryland, College Park, MD 20742-4111, USA}}
+\affil[81]{Univ. of Maryland, College Park, MD 20742-4111, USA}
 
-\affil[82]{\mbox{Massachusetts Institute of Technology, Cambridge, MA 02139-4307, USA}}
+\affil[82]{Massachusetts Institute of Technology, Cambridge, MA 02139-4307, USA}
 
-\affil[83]{\mbox{Univ. of Puerto Rico, Box 9016; Mayaguez, PR 00681-9000, USA}}
+\affil[83]{Univ. of Puerto Rico, Box 9016; Mayaguez, PR 00681-9000, USA}
 
-\affil[84]{\mbox{Michigan State University, East Lansing, MI 48824, USA}}
+\affil[84]{Michigan State University, East Lansing, MI 48824, USA}
 
-\affil[85]{\mbox{Univ. di Milano, INFN Sezione di Milano, I-20133 Milano, Italy}}
+\affil[85]{Univ. di Milano, INFN Sezione di Milano, I-20133 Milano, Italy}
 
-\affil[86]{\mbox{INFN Sezione di Milano Bicocca, Piazza della Scienza 3, 20126 Milano, Italy}}
+\affil[86]{INFN Sezione di Milano Bicocca, Piazza della Scienza 3, 20126 Milano, Italy}
 
-\affil[87]{\mbox{Univ. of Minnesota, Minneapolis, MN 55455, USA}}
+\affil[87]{Univ. of Minnesota, Minneapolis, MN 55455, USA}
 
-\affil[88]{\mbox{Univ. of Minnesota (Duluth), Duluth, MN 55812, USA}}
+\affil[88]{Univ. of Minnesota (Duluth), Duluth, MN 55812, USA}
 
-\affil[89]{\mbox{NIKHEF, Amsterdam, Netherlands, Netherlands}}
+\affil[89]{NIKHEF, Amsterdam, Netherlands, Netherlands}
 
-\affil[90]{\mbox{Istituto Nazionale di Fisica Nucleare - Sezione di Napoli, Complesso Universitario di Monte S. Angelo, I-80126 Napoli, Italy}}
+\affil[90]{Istituto Nazionale di Fisica Nucleare - Sezione di Napoli, Complesso Universitario di Monte S. Angelo, I-80126 Napoli, Italy}
 
-\affil[91]{\mbox{National Centre for Nuclear Research, A. Soltana 7, 05 400 Otwock
-Poland, Poland}}
+\affil[91]{National Centre for Nuclear Research, A. Soltana 7, 05 400 Otwock
+Poland, Poland}
 
-\affil[92]{\mbox{Jawaharlal Nehru University, New Delhi 110067, INDIA, India}}
+\affil[92]{Jawaharlal Nehru University, New Delhi 110067, INDIA, India}
 
-\affil[93]{\mbox{Univ. of New Mexico, MSC07 4220;
-Albuquerque, NM 87131, USA}}
+\affil[93]{Univ. of New Mexico, MSC07 4220;
+Albuquerque, NM 87131, USA}
 
-\affil[94]{\mbox{Northwestern University, Evanston, Il 60208, USA}}
+\affil[94]{Northwestern University, Evanston, Il 60208, USA}
 
-\affil[95]{\mbox{Univ. of Notre Dame, Notre Dame, IN 46556-5670, USA}}
+\affil[95]{Univ. of Notre Dame, Notre Dame, IN 46556-5670, USA}
 
-\affil[96]{\mbox{Observatorio Nacional, , Brazil}}
+\affil[96]{Observatorio Nacional, , Brazil}
 
-\affil[97]{\mbox{Ohio State Univ., Dept. of Physics; 191 W. Woodruff Ave.;
-Columbus, OH 43210, USA}}
+\affil[97]{Ohio State Univ., Dept. of Physics; 191 W. Woodruff Ave.;
+Columbus, OH 43210, USA}
 
-\affil[98]{\mbox{Oregon State University, Dept. of Physics;
-301 Weniger Hall; Corvallis, OR 97331\textendash6507, USA}}
+\affil[98]{Oregon State University, Dept. of Physics;
+301 Weniger Hall; Corvallis, OR 97331\textendash6507, USA}
 
-\affil[99]{\mbox{Univ. of Oxford, Oxford, OX1 3RH, UK}}
+\affil[99]{Univ. of Oxford, Oxford, OX1 3RH, UK}
 
-\affil[100]{\mbox{Pacific Northwest National Lab, , USA}}
+\affil[100]{Pacific Northwest National Lab, , USA}
 
-\affil[101]{\mbox{Pennsylvania State University, PMB 264;
-University Park, PA 16802-6300, USA}}
+\affil[101]{Pennsylvania State University, PMB 264;
+University Park, PA 16802-6300, USA}
 
-\affil[102]{\mbox{PUCP, , Peru}}
+\affil[102]{PUCP, , Peru}
 
-\affil[103]{\mbox{Univ. of Padova, Dip. Fisica e Astronomia G. Galilei and INFN Sezione di
-Padova, I-35131 Padova, Italy}}
+\affil[103]{Univ. of Padova, Dip. Fisica e Astronomia G. Galilei and INFN Sezione di
+Padova, I-35131 Padova, Italy}
 
-\affil[104]{\mbox{Panjab University, Chandigarh, 160014 U.T., India}}
+\affil[104]{Panjab University, Chandigarh, 160014 U.T., India}
 
-\affil[105]{\mbox{Univ. of Pavia, INFN Sezione di Pavia, I-27100 Pavia, Italy}}
+\affil[105]{Univ. of Pavia, INFN Sezione di Pavia, I-27100 Pavia, Italy}
 
-\affil[106]{\mbox{Univ. of Pennsylvania, Philadelphia, PA 19104-6396, USA}}
+\affil[106]{Univ. of Pennsylvania, Philadelphia, PA 19104-6396, USA}
 
-\affil[107]{\mbox{Univ. di Pisa, Theor. Division;
-Largo B. Pontecorvo 3, Ed. B-C; I-56127 Pisa, Italy}}
+\affil[107]{Univ. di Pisa, Theor. Division;
+Largo B. Pontecorvo 3, Ed. B-C; I-56127 Pisa, Italy}
 
-\affil[108]{\mbox{Univ. of Pittsburgh, Pittsburgh, PA 15260, USA}}
+\affil[108]{Univ. of Pittsburgh, Pittsburgh, PA 15260, USA}
 
-\affil[109]{\mbox{Princeton University, Princeton, New Jersey 08544-0708, USA}}
+\affil[109]{Princeton University, Princeton, New Jersey 08544-0708, USA}
 
-\affil[110]{\mbox{Punjab Agri. University, Centre for High Energy Physics;
-Lahore - 54590, India}}
+\affil[110]{Punjab Agri. University, Centre for High Energy Physics;
+Lahore - 54590, India}
 
-\affil[111]{\mbox{Univ. of Rochester, Rochester, NY 14627-0171, USA}}
+\affil[111]{Univ. of Rochester, Rochester, NY 14627-0171, USA}
 
-\affil[112]{\mbox{SLAC National Acceleratory Laboratory, Menlo Park, CA 94025, USA}}
+\affil[112]{SLAC National Acceleratory Laboratory, Menlo Park, CA 94025, USA}
 
-\affil[113]{\mbox{STFC Rutherford Appleton Laboratory, Harwell Oxford, Didcot OX11 0QX, UK}}
+\affil[113]{STFC Rutherford Appleton Laboratory, Harwell Oxford, Didcot OX11 0QX, UK}
 
-\affil[114]{\mbox{CEA/Saclay, IPhT; Inst. de Physique Th ́eorique;
+\affil[114]{CEA/Saclay, IPhT; Inst. de Physique Th\'eorique;
 Orme des Merisiers, Point Courrier 136;
-F-91191 Gif-sur-Yvette CEDE, France}}
+F-91191 Gif-sur-Yvette CEDE, France}
 
-\affil[115]{\mbox{Univ. of Sheffield, Sheffield, S3 7RH, UK}}
+\affil[115]{Univ. of Sheffield, Sheffield, S3 7RH, UK}
 
-\affil[116]{\mbox{Univ. of Sofia, Atomic Physics Dept., Faculty of Physics;
-5 James Bourchier Blvd.; BG-1164 Sofia, Bulgaria}}
+\affil[116]{Univ. of Sofia, Atomic Physics Dept., Faculty of Physics;
+5 James Bourchier Blvd.; BG-1164 Sofia, Bulgaria}
 
-\affil[117]{\mbox{Univ. of South Carolina, Columbia, SC 29208, USA}}
+\affil[117]{Univ. of South Carolina, Columbia, SC 29208, USA}
 
-\affil[118]{\mbox{Univ. of South Dakota, Vermillion, SD 57069, USA}}
+\affil[118]{Univ. of South Dakota, Vermillion, SD 57069, USA}
 
-\affil[119]{\mbox{South Dakota School of Mines and Technology, Rapid City, SD 57701, USA}}
+\affil[119]{South Dakota School of Mines and Technology, Rapid City, SD 57701, USA}
 
-\affil[120]{\mbox{South Dakota Science And Technology Authority, Lead, SD 57754, USA}}
+\affil[120]{South Dakota Science And Technology Authority, Lead, SD 57754, USA}
 
-\affil[121]{\mbox{South Dakota State University, Brookings, SD 57007, USA}}
+\affil[121]{South Dakota State University, Brookings, SD 57007, USA}
 
-\affil[122]{\mbox{Southern Methodist University, Dallas, TX 75275, USA}}
+\affil[122]{Southern Methodist University, Dallas, TX 75275, USA}
 
-\affil[123]{\mbox{Stanford University, Varian Physics Bldg.; 382 Via Pueblo Mall;
-Stanford, CA 94305\textendash4060, USA}}
+\affil[123]{Stanford University, Varian Physics Bldg.; 382 Via Pueblo Mall;
+Stanford, CA 94305\textendash4060, USA}
 
-\affil[124]{\mbox{Stony Brook University, Nucleon Decay and Neutrino Physics Group
+\affil[124]{Stony Brook University, Nucleon Decay and Neutrino Physics Group
 Department of Physics and Astronomy
 Stony Brook University
-Stony Brook, NY 11794-3800, USA}}
+Stony Brook, NY 11794-3800, USA}
 
-\affil[125]{\mbox{Univ. of Sussex, Brighton, BN1 9RH, UK}}
+\affil[125]{Univ. of Sussex, Brighton, BN1 9RH, UK}
 
-\affil[126]{\mbox{Syracuse University, Syracuse, NY 13244-1130, USA}}
+\affil[126]{Syracuse University, Syracuse, NY 13244-1130, USA}
 
-\affil[127]{\mbox{Univ. of Tennessee, Knoxville, TN, USA}}
+\affil[127]{Univ. of Tennessee, Knoxville, TN, USA}
 
-\affil[128]{\mbox{Univ. of Texas (Arlington), Arlington, TX 76019, USA}}
+\affil[128]{Univ. of Texas (Arlington), Arlington, TX 76019, USA}
 
-\affil[129]{\mbox{Univ. of Texas (Austin), Austin, TX 78712-0264, USA}}
+\affil[129]{Univ. of Texas (Austin), Austin, TX 78712-0264, USA}
 
-\affil[130]{\mbox{TUBITAK Space Technologies Research Institute , Ankara, Turkey, Turkey}}
+\affil[130]{TUBITAK Space Technologies Research Institute , Ankara, Turkey, Turkey}
 
-\affil[131]{\mbox{Tufts University, Medford, MA 02155, USA}}
+\affil[131]{Tufts University, Medford, MA 02155, USA}
 
-\affil[132]{\mbox{Variable Energy Cyclotron Centr, , India}}
+\affil[132]{Variable Energy Cyclotron Centr, , India}
 
-\affil[133]{\mbox{Instituto de Fisica Corpuscular, C/Catedratico Jose Beltran, 2
+\affil[133]{Instituto de Fisica Corpuscular, C/Catedratico Jose Beltran, 2
 E-46980 Paterna (Valencia)
-Spain, Spain}}
+Spain, Spain}
 
-\affil[134]{\mbox{Virginia Tech., Blacksburg, VA 24061-0435, USA}}
+\affil[134]{Virginia Tech., Blacksburg, VA 24061-0435, USA}
 
-\affil[135]{\mbox{Univ. of Warsaw, Faculty of Physics 
+\affil[135]{Univ. of Warsaw, Faculty of Physics 
 ul. Pasteura 5
 02-093 Warsaw
-Poland, Poland}}
+Poland, Poland}
 
-\affil[136]{\mbox{Univ. of Warwick, Coventry CV4 7AL, UK}}
+\affil[136]{Univ. of Warwick, Coventry CV4 7AL, UK}
 
-\affil[137]{\mbox{Wichita State, , USA}}
+\affil[137]{Wichita State, , USA}
 
-\affil[138]{\mbox{College of William and Mary, Williamsburg, VA 23187-8795, USA}}
+\affil[138]{College of William and Mary, Williamsburg, VA 23187-8795, USA}
 
-\affil[139]{\mbox{Univ. of Wisconsin, Madison, WI 53706, USA}}
+\affil[139]{Univ. of Wisconsin, Madison, WI 53706, USA}
 
-\affil[140]{\mbox{Wroclaw University, 50-204 Wroclaw, Poland, Poland}}
+\affil[140]{Wroclaw University, 50-204 Wroclaw, Poland, Poland}
 
-\affil[141]{\mbox{Yale University, New Haven, CT 06520, USA}}
+\affil[141]{Yale University, New Haven, CT 06520, USA}
 
-\affil[142]{\mbox{Yerevan Institute for Theoretical Physics and Modeling, Halabian Str. 34; Yerevan 0036; Armenia, Armenia}}
+\affil[142]{Yerevan Institute for Theoretical Physics and Modeling, Halabian Str. 34; Yerevan 0036; Armenia, Armenia}
 
-\affil[143]{\mbox{York, Physics and Astronomy Dept.;
-4700 Keele St.; Toronto M3J 1P3, Canada}}
+\affil[143]{York, Physics and Astronomy Dept.;
+4700 Keele St.; Toronto M3J 1P3, Canada}
 
-\affil[144]{\mbox{ETH Zurich, HPK F 23
+\affil[144]{ETH Zurich, HPK F 23
 Schafmattstr. 20
-8093 Z\"urich, Switzerland}}
+8093 Z\"urich, Switzerland}
 
 
 
