--- a/bibliography.tex
+++ b/bibliography.tex
@@ -98,7 +98,7 @@ A. Szelc., conference: \url{http://neutrino2014.bu.edu/}.
 
 % Add if doc can be made public in docdb -- AH 
 % \bibitem{montanari_35ton_perf} Performance And Results of the LBNE 35 ton Membrane Cryostat Prototype
-% \textit{D.Montanari et al, 25th International Cryogenic Engineering Conference and the International Cryogenic Materials Conference in 2014, ICEC 25–ICMC 2014, LBNE Docid 9270} 
+% \textit{D.Montanari et al, 25th International Cryogenic Engineering Conference and the International Cryogenic Materials Conference in 2014, ICEC 25-ICMC 2014, LBNE Docid 9270} 
 
 % \bibitem{acciarri_sbn_proposal} A Proposal for a Three Detector Short-Baseline Neutrino Oscillation Program in the Fermilab Booster Neutrino Beam \textit{R.Acciarri et al} \url{http://arxiv.org/abs/1503.01520}
 
