--- a/cryo.tex
+++ b/cryo.tex
@@ -126,7 +126,7 @@ The membrane cryostat requires insulation applied to all internal surfaces of th
 and roof in order to control the heat ingress and hence required refrigeration heat load. 
 To avoid bubbling of the liquid argon inside the tank, the maximum static heat leak is 10 W/m$^2$ for the floor and the sides and 15 W/m$^2$ for the roof, higher to account for the penetrations that increase the heat budget. Preliminary calculations show that these values can be obtained using 0.9 m thick insulation panels of polyurethane foam.
 Given an 
-average thermal conductivity coefficient for the insulation material of 0.0283 W/(m·K), the heat input 
+average thermal conductivity coefficient for the insulation material of 0.0283 W/(m$\cdot$K), the heat input 
 from the surrounding steel is expected to be about 3.2~kW total. It assumes that the hatches are foam 
 insulated as well. This is shown in Table~\ref{tbl:heat-load-calc}.
 
