--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -48,7 +48,7 @@
 \date{\today}
 %\date{April 15, 2015}
 	\input{authors}
-%	\input{150506_v2_DUNE_authors}
+%	\input{150519_DUNE_authors}
 
 \maketitle
 
